<resources>
    <string name="fernando_sandoval">Fernando Sandoval</string>
    <string name="appname">TechnoShop</string>
    <string name="mensaje_inicio">Una tienda en la palma de tu mano.</string>
    <string name="Comenzar">Empecemos</string>
    <string name="Correo">Correo electrónico</string>
    <string name="Btn_iniciar">Iniciar sesión</string>
    <string name="registrate">Registrate</string>
    <string name="iniciar_s">iniciar_sesion</string>
    <string name="Nombre">Ingresa tu nombre aquí</string>
    <string name="Contraseña">Elige tu contraseña</string>
    <string name="ConfirmarC">Confirma tu contraseña</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Password">Contraseña</string>
    <string name="iniciar_con_google">Iniciar con Google</string>
    <string name="Config">Configuración</string>
    <string name="usuario">User</string>
    <string name="carrito">Carrito</string>
    <string name="salir">salir</string>
    <string name="descripcion_lista_productos">Producto</string>
</resources>