<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="210dp"
        android:layout_height="51dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="101dp"
        android:backgroundTint="@color/blue1"
        android:text="@string/Registrarse"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="321dp"
        android:layout_height="383dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="104dp"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="203dp"
            android:layout_height="25dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Nombre"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/edt_name"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:hint="@string/Nombre"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="203dp"
            android:layout_height="25dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Correo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/edt_email_register"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:hint="@string/Correo"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="203dp"
            android:layout_height="25dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Contraseña"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/edt_password_register"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:hint="@string/Contraseña"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="203dp"
            android:layout_height="25dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/ConfirmarC"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/edt_password_confirm"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:hint="@string/ConfirmarC"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>