<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="253dp"
        android:layout_height="190dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="403dp"
        android:layout_height="402dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.284">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="349dp"
            android:layout_height="89dp"
            android:layout_margin="10dp"
            android:gravity="fill_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="100dp"
                app:srcCompat="@drawable/btn_user" />

            <EditText
                android:id="@+id/edt_email_login"
                style="@style/EditText"
                android:layout_width="266dp"
                android:layout_height="59dp"
                android:hint="@string/Correo"
                app:layout_constraintBottom_toTopOf="@+id/btn_iniciars"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.462"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.175" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="349dp"
            android:layout_height="89dp"
            android:layout_margin="10dp"
            android:gravity="fill_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="100dp"
                app:srcCompat="@drawable/password" />

            <EditText
                android:id="@+id/edt_password_login"
                style="@style/EditText"
                android:layout_width="264dp"
                android:layout_height="59dp"
                android:hint="@string/Password"
                app:layout_constraintBottom_toTopOf="@+id/btn_iniciars"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.864" />
        </LinearLayout>

        <Button
            android:id="@+id/Btn_Google"
            android:layout_width="271dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/white"
            android:text="@string/iniciar_con_google"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_google"
            app:iconSize="30dp"
            app:iconTint="@null"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="519dp" />

        <Button
            android:id="@+id/Btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue1"
            android:text="@string/Btn_iniciar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>